adjusting naming conventions

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -34,7 +34,7 @@
               <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Budgets</a>
               <ul class="collapse list-unstyled" id="pageSubmenu">
                   <li>
-                      <a routerLink='/budgetActual'>Budgets Vs Act</a>
+                      <a routerLink='/budgetActual'>Budgets Vs Actual</a>
                   </li>
                   <li>
                       <a routerLink='/productionbudget'>Production Budget</a>
