--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
       <div>
         <form [formGroup]="form">
           <div class="lg-3">
-            <label for="formEmail" class="form-label">Email address</label>
+            <label for="formEmail" class="form-label">Email Address</label>
             <input formControlName="email" type="text" class="form-control" placeholder="Email" id="formEmail"/>
             <div *ngIf="form.controls['email'].invalid && ((form.controls['email'].touched) || (this.form.controls['email'].dirty))">
               <small *ngIf="this.form.controls['email'].hasError('required')" class="form-text text-danger">Please Enter Your Email</small> 
