--- a/src/app/components/daily-actions/daily-actions.component.html
+++ b/src/app/components/daily-actions/daily-actions.component.html
@@ -5,10 +5,22 @@
 		<br />
 		<div class="row">
 		  <div class="col-md-12">
-			<button *ngIf="highlightedRow !== -1 &&( concession === jobLocation || userRole ==='2')" class="btn btn-danger" (click)="deleteFromReports()">🗑️</button>
-			<button *ngIf="highlightedRow !== -1 &&( concession === jobLocation || userRole ==='2')" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
-			<button *ngIf="concession === jobLocation || userRole ==='2'" class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
-
+        <div align="right">
+          <button  *ngIf="(concession === jobLocation|| userRole=='2')" class="btn btn-primary"  (click)="triggerModal(modalData)">
+            INSERT
+          </button>
+          <button
+            *ngIf="highlightedRow !== -1 &&( concession === jobLocation || userRole == '2')"
+            class="btn btn-warning"
+            (click)="triggerModal(modalDataUpdate)"
+          >
+            UPDATE
+          </button>
+          <button *ngIf="highlightedRow !== -1 &&(concession === jobLocation || userRole ==='2')" (click)="deleteFromReports()" type="button" class="btn btn-danger">
+            DELETE
+          </button>
+        </div>
+        <br>
 
 			<ng-template #modalData let-modal>
 			  <div class="modal-header">
