--- a/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
+++ b/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
@@ -5,9 +5,22 @@
       <br />
       <div class="row">
         <div class="col-md-12">
-          <button *ngIf="highlightedRow !== -1 && (concession === jobLocation || +role === 2)" class="btn btn-danger" (click)="deleteFromFlms()">🗑️</button>
-          <button *ngIf="highlightedRow !== -1 && (concession === jobLocation || +role === 2)" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
-          <button *ngIf="concession === jobLocation || +role === 2" class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+          <div align="right">
+            <button  *ngIf="(concession === jobLocation|| role=='2')" class="btn btn-primary"  (click)="triggerModal(modalData)">
+              INSERT
+            </button>
+            <button
+              *ngIf="highlightedRow !== -1 &&( concession === jobLocation || role == '2')"
+              class="btn btn-warning"
+              (click)="triggerModal(modalDataUpdate)"
+            >
+              UPDATE
+            </button>
+            <button *ngIf="highlightedRow !== -1 &&(concession === jobLocation || role ==='2')" (click)="deleteFromFlms()" type="button" class="btn btn-danger">
+              DELETE
+            </button>
+          </div>
+          <br>
 
           <ng-template #modalData let-modal>
             <div class="modal-header">
