--- a/src/app/components/intervals-info/intervals-info.component.html
+++ b/src/app/components/intervals-info/intervals-info.component.html
@@ -4,7 +4,7 @@
        <br>
        <div class="row">
       <div class="col-md-12">
-        <div align="right">
+        <div>
           <button  *ngIf="(concession === jobLocation|| userRole=='2')" class="btn btn-primary"  (click)="triggerModal(modalData)">
             INSERT
           </button>
