--- a/src/app/components/production-budget/production-budget.component.css
+++ b/src/app/components/production-budget/production-budget.component.css
@@ -1,4 +1,7 @@
 .table tr.active td {
-  background-color:blue !important;
-  color: white;
+  background-color:#C8C8C8 !important;
+  color: black;
+}
+button {
+  margin: 16px 8px;
 }
