editing drilling ifno table row

--- a/src/app/components/drilling-info/drilling-info.component.html
+++ b/src/app/components/drilling-info/drilling-info.component.html
@@ -73,7 +73,7 @@
                 <th>measured_depth</th>
                 <th>tvd_depth</th>
                 <th>bbtp</th>
-                <th>production_general_info</th>
+<!--                <th>production_general_info</th>-->
               </tr>
             </thead>
             <tbody>
@@ -94,7 +94,7 @@
                 <td>{{ drill.measuredDepth }}</td>
                 <td>{{ drill.tvdDepth }}</td>
                 <td>{{ drill.bbtp }}</td>
-                <td>{{ drill.productionGeneralInfo }}</td>
+<!--                <td>{{ drill.productionGeneralInfo }}</td>-->
               </tr>
             </tbody>
           </table>
