--- a/src/app/components/budget-actual/budget-actual.component.html
+++ b/src/app/components/budget-actual/budget-actual.component.html
@@ -5,9 +5,9 @@
     </mat-form-field>
   </div>
 
-  <button mat-raised-button color="primary"> Add Row</button>
+  <!-- <button mat-raised-button color="primary"> Add Row</button>
   <button mat-raised-button color="accent"> Edit Row</button>
-  <button mat-raised-button color="warn"> Remove</button>
+  <button mat-raised-button color="warn"> Remove</button> -->
 
   <div class="container mat-elevation-z8">
     <mat-table #table [dataSource]="dataSource" matSort class="responsive-table">
