--- a/src/app/components/admin-assign-roles/admin-assign-roles.component.html
+++ b/src/app/components/admin-assign-roles/admin-assign-roles.component.html
@@ -21,7 +21,7 @@
                             <option disabled>Select Role</option>
                             <option value=2>Office Engineer</option>
                             <option value=3>Field Engineer</option>
-                            <option value=1>Non</option>
+                            <!-- <option value=1>Non</option> -->
                         </select>
                         <div *ngIf="this.form.controls['jobTitle'].touched && this.form.controls['jobTitle'].invalid">
                             <small *ngIf="this.form.controls['jobTitle'].errors.required" class="form-text text-danger">Please Choose a Role</small>
