--- a/src/app/components/lab-measurement/update-lab/update-lab.component.html
+++ b/src/app/components/lab-measurement/update-lab/update-lab.component.html
@@ -4,10 +4,10 @@
         <br />
         <div>
 
-            <div class="lg-3">
+            <!-- <div class="lg-3">
                 <label for="formWellId" class="form-label">WellId</label>
                 <input type="number" [(ngModel)]="wellId" class="form-control" placeholder="wellId" id="formWellId" />
-              </div>
+              </div> -->
 
           <form [formGroup]="form">
             <div class="lg-3">
