enhancements and comments

--- a/src/app/components/budget-actual/budget-actual.component.html
+++ b/src/app/components/budget-actual/budget-actual.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="form">
+  <!-- <div class="form">
     <mat-form-field floatPlaceholder="never" color="accent">
       <input matInput #filter placeholder="Filter Budgets">
     </mat-form-field>
-  </div>
+  </div> -->
 
   <!-- <button mat-raised-button color="primary"> Add Row</button>
   <button mat-raised-button color="accent"> Edit Row</button>
