--- a/src/app/components/well-test-table/well-test-table.component.html
+++ b/src/app/components/well-test-table/well-test-table.component.html
@@ -1,13 +1,13 @@
-<button *ngIf=" concession === jobLocation || userRole ==='2'" mat-raised-button color="primary" (click)="addNew()">Add Test</button>
+<!-- <button *ngIf=" concession === jobLocation || userRole ==='2'" mat-raised-button color="primary" (click)="addNew()">Add Test</button>
 <button *ngIf=" concession === jobLocation || userRole ==='2'" mat-raised-button color="accent">Edit Test</button>
-<button *ngIf=" concession === jobLocation || userRole ==='2'" mat-raised-button color="warn">Delete</button>
+<button *ngIf=" concession === jobLocation || userRole ==='2'" mat-raised-button color="warn">Delete</button> -->
 
 <div class="container mat-elevation-z8 spacer">
-  <div class="form">
+  <!-- <div class="form">
     <mat-form-field floatPlaceholder="never" color="accent">
       <input matInput #filter placeholder="Filter issues">
     </mat-form-field>
-  </div>
+  </div> -->
 
   <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
     <!--    Column Id-->
