--- a/src/app/components/well-general-info/well-general-info.component.html
+++ b/src/app/components/well-general-info/well-general-info.component.html
@@ -5,7 +5,7 @@
          <div class="row">
         <div class="col-md-12">
           <div>
-            <button  *ngIf="(concession === jobLocation|| userRole=='2')" class="btn btn-primary"  (click)="triggerModal(modalData)">
+            <button  *ngIf="(wellGeneralInfoResponse === null && (concession === jobLocation || userRole=='2'))" class="btn btn-primary"  (click)="triggerModal(modalData)">
               INSERT
             </button>
             <button
