--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -35,7 +35,7 @@
           <button [disabled]="form.invalid" type="submit" class="btn btn-primary" (click)="login()">Sign in</button>
         </form>
         <br>
-        <div class="alert alert-warning" *ngIf="flag === true">Wrong Email or Password!</div>
+        <div class="alert alert-warning" *ngIf="flag === true">{{msg}}</div>
         <br>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="registration">New Around Here? Sign up</a>
